@@ -268,20 +268,11 @@
     </version>
   </module>
   <module name="dia">
-    <version release="gnome-1.4-fifth-toe">
-      <component name="dia" dir="dia">
-	<podir dir="po"/>
-	<potname name="dia.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
     <version release="gnome-2.0-fifth-toe">
       <component name="dia" dir="dia">
         <podir dir="po"/>
         <potname name="dia.pot"/>
-        <branch name="TARGET_GTK2_0"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
