@@ -1,3 +1,8 @@
+2002-10-09  Carlos Perello Marin <carlos@gnome-db.org>
+
+	* translation-status.xml: Removed dia for GNOME 1.4 and fixed the
+	GNOME 2.0 branch.
+
 2002-10-09  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Fixed branch for gnome-media.
